--- a/FRONTEND00/www/css/style.css
+++ b/FRONTEND00/www/css/style.css
@@ -1,31 +1,33 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
+    background-color: rgb(145, 136, 111);
+    color: white
 }
 
-/* Add a black background color to the top navigation */
 .topnav {
-    background-color: #333;
+    background-color: #1d1d1d;
     overflow: hidden;
 }
 
-/* Style the links inside the navigation bar */
 .topnav a {
     float: left;
-    color: #f2f2f2;
+    color: gray;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
 }
 
-/* Change the color of links on hover */
 .topnav a:hover {
-    background-color: #ddd;
-    color: black;
+    background-color: rgb(82, 82, 82);
+    color: whitesmoke;
 }
 
-/* Add a color to the active/current link */
 .topnav a.active {
     background-color: #04AA6D;
     color: white;
