--- a/FRONTEND00/www/css/style.css
+++ b/FRONTEND00/www/css/style.css
@@ -12,6 +12,7 @@ body {
 .topnav {
     background-color: #1d1d1d;
     overflow: hidden;
+    position: fixed;
 }
 
 .topnav a {
@@ -32,3 +33,73 @@ body {
     background-color: #04AA6D;
     color: white;
 }
+
+
+
+	/* Botão para abrir o Login */
+    .open-button {
+        background-color: #555;
+        color: white;
+        padding: 16px 10px;
+        border: none;
+        cursor: pointer;
+        opacity: 0.8;
+        position: fixed;
+        top: 54px;
+        right: 0px;
+        width: 280px;
+      }
+      
+      /* Popup do Login */
+      .form-popup {
+        display: none;
+        position: fixed;
+        bottom: 0;
+        right: 15px;
+        border: 3px solid #f1f1f1;
+        z-index: 9;
+      }
+      
+      /* Style do Popup */
+      .form-container {
+        max-width: 300px;
+        padding: 10px;
+        background-color: white;
+        color: black;
+      }
+      
+      /* Inputs default */
+      .form-container input[type=text], .form-container input[type=password] {
+        width: 100%;
+        padding: 15px;
+        margin: 5px 0 22px 0;
+        border: none;
+        background: #f1f1f1;
+      }
+      
+      /* Inputs a serem utilizados */
+      .form-container input[type=text]:focus, .form-container input[type=password]:focus {
+        background-color: #ddd;
+        outline: none;
+      }
+      
+      /* Botao login dentro do popup */
+      .form-container .btn {
+        background-color: #04AA6D;
+        color: white;
+        padding: 16px 20px;
+        border: none;
+        cursor: pointer;
+        width: 100%;
+        margin-bottom:10px;
+        opacity: 0.8;
+      }
+      
+      /* Mudar a cor do botao cancel */
+      .form-container .cancel {
+        background-color: red;
+      }
+      
+      .form-container .btn:hover, .open-button:hover {
+        opacity: 1;
+      }
