--- a/FRONTEND00/www/css/style.css
+++ b/FRONTEND00/www/css/style.css
@@ -1,105 +1,96 @@
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
-    background-color: rgb(145, 136, 111);
-    color: white
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  background-color: rgb(185, 185, 185);
+  color: rgb(56, 56, 56);
 }
 
 .topnav {
-    background-color: #1d1d1d;
-    overflow: hidden;
-    position: fixed;
+  background-color: #1d1d1d;
+  position: fixed;
+  overflow: auto;
+  width: 100%;
 }
 
 .topnav a {
-    float: left;
-    color: gray;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
+  float: left;
+  color: rgb(197, 197, 197);
+  text-align: center;
+  padding: 16px;
+  text-decoration: none;
 }
 
 .topnav a:hover {
-    background-color: rgb(82, 82, 82);
-    color: whitesmoke;
+  background-color: rgb(82, 82, 82);
+  color: whitesmoke;
 }
 
 .topnav a.active {
-    background-color: #04AA6D;
-    color: white;
+  background-color: #04AA6D;
+  color: white;
 }
 
+.open-button {
+  background-color: #555;
+  color: white;
+  padding: 16px 10px;
+  border: none;
+  cursor: pointer;
+  opacity: 0.8;
+  position: fixed;
+  top: 54px;
+  right: 0px;
+  width: 280px;
+}
 
+.form-popup {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  right: 15px;
+  border: 3px solid #f1f1f1;
+  z-index: 9;
+}
 
-	/* Botão para abrir o Login */
-    .open-button {
-        background-color: #555;
-        color: white;
-        padding: 16px 10px;
-        border: none;
-        cursor: pointer;
-        opacity: 0.8;
-        position: fixed;
-        top: 54px;
-        right: 0px;
-        width: 280px;
-      }
-      
-      /* Popup do Login */
-      .form-popup {
-        display: none;
-        position: fixed;
-        bottom: 0;
-        right: 15px;
-        border: 3px solid #f1f1f1;
-        z-index: 9;
-      }
-      
-      /* Style do Popup */
-      .form-container {
-        max-width: 300px;
-        padding: 10px;
-        background-color: white;
-        color: black;
-      }
-      
-      /* Inputs default */
-      .form-container input[type=text], .form-container input[type=password] {
-        width: 100%;
-        padding: 15px;
-        margin: 5px 0 22px 0;
-        border: none;
-        background: #f1f1f1;
-      }
-      
-      /* Inputs a serem utilizados */
-      .form-container input[type=text]:focus, .form-container input[type=password]:focus {
-        background-color: #ddd;
-        outline: none;
-      }
-      
-      /* Botao login dentro do popup */
-      .form-container .btn {
-        background-color: #04AA6D;
-        color: white;
-        padding: 16px 20px;
-        border: none;
-        cursor: pointer;
-        width: 100%;
-        margin-bottom:10px;
-        opacity: 0.8;
-      }
-      
-      /* Mudar a cor do botao cancel */
-      .form-container .cancel {
-        background-color: red;
-      }
-      
-      .form-container .btn:hover, .open-button:hover {
-        opacity: 1;
-      }
+.form-container {
+  max-width: 300px;
+  padding: 10px;
+  background-color: white;
+  color: black;
+}
+
+.form-container input[type=text], .form-container input[type=password] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #f1f1f1;
+}
+
+.form-container input[type=text]:focus, .form-container input[type=password]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+.form-container .btn {
+  background-color: #04AA6D;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom:10px;
+  opacity: 0.8;
+}
+
+.form-container .cancel {
+  background-color: red;
+}
+
+.form-container .btn:hover, .open-button:hover {
+  opacity: 1;
+}
