--- a/FRONTEND00/www/css/style.css
+++ b/FRONTEND00/www/css/style.css
@@ -94,3 +94,13 @@ body {
 .form-container .btn:hover, .open-button:hover {
   opacity: 1;
 }
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #1d1d1d;
+  color: white;
+  text-align: center;
+}
