--- a/FRONTEND00/www/css/style.css
+++ b/FRONTEND00/www/css/style.css
@@ -14,18 +14,21 @@ body {
   position: fixed;
   overflow: auto;
   width: 100%;
+  transition: 0.3s;
 }
 
 .topnav a {
   float: left;
   color: rgb(197, 197, 197);
   text-align: center;
+  transition: 0.3s;
   padding: 16px;
   text-decoration: none;
 }
 
 .topnav a:hover {
   background-color: rgb(82, 82, 82);
+  transition: 0.3s;
   color: whitesmoke;
 }
 
@@ -45,6 +48,7 @@ body {
   top: 54px;
   right: 0px;
   width: 280px;
+  transition: 0.3s;
 }
 
 .form-popup {
