--- a/FRONTEND00/www/css/style.css
+++ b/FRONTEND00/www/css/style.css
@@ -38,14 +38,14 @@ body {
 }
 
 .open-button {
-  background-color: #555;
+  background-color: rgba(151, 141, 141, 0.76); 
   color: white;
   padding: 16px 10px;
   border: none;
   cursor: pointer;
   opacity: 0.8;
   position: fixed;
-  top: 54px;
+  top: 56px;
   right: 0px;
   width: 280px;
   transition: 0.3s;
@@ -54,10 +54,11 @@ body {
 .form-popup {
   display: none;
   position: fixed;
-  bottom: 0;
   right: 15px;
   border: 3px solid rgb(82, 82, 82);
   z-index: 9;
+  top: 55px;
+  right: 0px;
 }
 
 .form-container {
@@ -72,7 +73,7 @@ body {
   padding: 15px;
   margin: 5px 0 22px 0;
   border: none;
-  background: rgb(82, 82, 82);
+  background: rgb(131, 131, 131);
 }
 
 .form-container input[type=text]:focus, .form-container input[type=password]:focus {
