--- a/Projeto/public/www/css/style.css
+++ b/Projeto/public/www/css/style.css
@@ -15,6 +15,7 @@ body {
   overflow: auto;
   width: 100%;
   transition: 0.3s;
+  z-index: 1;
 }
 
 .topnav a {
@@ -130,7 +131,7 @@ body {
   padding: 5px;
 }
 
-.row::after {
+.row::after{
   content: "";
   clear: both;
   display: table;
@@ -153,6 +154,7 @@ hr.new1 {
   border: 10px solid rgb(241, 185, 62);
   outline: 2px solid rgb(49, 22, 22);
   padding: 5px 10px;
+  margin-bottom: 30px;
 }
 
 .zoom{
