--- a/Projeto/public/www/css/style.css
+++ b/Projeto/public/www/css/style.css
@@ -1,4 +1,5 @@
 #produtos {display:none}
+#logout {display:none}
 
 html {
   scroll-behavior: smooth;
@@ -54,7 +55,21 @@ body {
   transition: 0.3s;
 }
 
-.register {
+.registar {
+  background-color: rgba(107, 60, 60, 0.76); 
+  color: white;
+  padding: 16px 10px;
+  border: none;
+  cursor: pointer;
+  opacity: 0.8;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  width: 150px;
+  transition: 0.3s;
+}
+
+.logout {
   background-color: rgba(107, 60, 60, 0.76); 
   color: white;
   padding: 16px 10px;
@@ -122,7 +137,11 @@ body {
   opacity: 1;
 }
 
-.register:hover {
+.registar:hover {
+  opacity: 1;
+}
+
+.logout:hover {
   opacity: 1;
 }
 
