--- a/Projeto/public/www/css/style.css
+++ b/Projeto/public/www/css/style.css
@@ -112,21 +112,26 @@ body {
 }
 
 .columnleft {
-  float: left;
+  width: 47%;
+  padding: 5px;
+  margin-left: 2%;
+}
+
+.columnright {
   width: 47%;
   padding: 5px;
 }
 
-.columnright {
-  float: right;
-  width: 47%;
-  padding: 5px;
+#prodList {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .row::after{
   content: "";
   clear: both;
   display: table;
+  float: middle;
 }
 
 hr.new1 {
