--- a/Projeto/public/www/css/style.css
+++ b/Projeto/public/www/css/style.css
@@ -41,6 +41,32 @@ body {
   color: white;
 }
 
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 700px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
 .login {
   background-color: rgba(107, 60, 60, 0.76); 
   color: white;
@@ -50,8 +76,8 @@ body {
   opacity: 0.8;
   position: absolute;
   top: 0px;
-  right: 150px;
-  width: 150px;
+  right: 100px;
+  width: 100px;
   transition: 0.3s;
 }
 
@@ -65,7 +91,7 @@ body {
   position: absolute;
   top: 0px;
   right: 0px;
-  width: 150px;
+  width: 100px;
   transition: 0.3s;
 }
 
@@ -135,18 +161,20 @@ body {
   float: middle;
 }
 
+hr.style-one {
+  border: 0;
+  height: 1px;
+  background: #333;
+  background-image: linear-gradient(to right, #ccc, #333, #ccc);
+}
+
+/*
 hr.new1 {
   border: 10px solid rgb(241, 185, 62);
   outline: 2px solid rgb(49, 22, 22);
   border-radius: 4px;
 }
-
-.imagebox1{
-  background-color: rgb(82, 82, 82);
-  outline: 3px solid #1d1d1d;
-  border: 3px solid #1d1d1d;
-  padding: 5px 10px;
-}
+*/
 
 .imagebox2{
   border: 10px solid rgb(241, 185, 62);
@@ -233,52 +261,3 @@ hr.new1 {
   transition: 0.3s;
   color: whitesmoke;
 }
-
-/*
-.form-popup {
-  display: none;
-  position: fixed;
-  right: 15px;
-  border: 3px solid rgb(131, 131, 131);
-  z-index: 9;
-  top: 55px;
-  right: 0px;
-}
-
-.form-container {
-  max-width: 300px;
-  padding: 10px;
-  background-color: rgb(131, 131, 131);
-  color: white;
-}
-
-.form-container input[type=text], .form-container input[type=password] {
-  width: 100%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
-  border: none;
-  background: rgb(56, 56, 56);
-}
-
-.form-container input[type=text]:focus, .form-container input[type=password]:focus {
-  background-color: #ddd;
-  outline: none;
-}
-
-.form-container .btn {
-  background-color: #04AA6D;
-  transition: 0.3s;
-  color: white;
-  padding: 16px 20px;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-  margin-bottom:10px;
-  opacity: 0.8;
-}
-
-.form-container .cancel {
-  background-color: red;
-  transition: 0.3s;
-}
-*/
