--- a/Projeto/public/www/css/style.css
+++ b/Projeto/public/www/css/style.css
@@ -256,6 +256,7 @@ hr.style-one {
   color: whitesmoke;
 }
 
+/*
 .formLogin {
   position:absolute;
   top:50%;
@@ -281,3 +282,41 @@ hr.style-one {
   border-radius:15px;
   cursor: pointer;
 }
+
+.formLogin h2{
+  text-align:center;
+  color:black;
+  margin:10px 0px 20px;
+  font-size:25px;
+}
+
+.formLogin .formElement {
+  margin:15px 0px;
+}
+
+.formLogin .formElement label{
+  font-size:14px;
+  color:black;
+}
+
+.formLogin .formElement input[type="text"], .formLogin .formElement input[type="password"] {
+  margin-top:5px;
+  display:block;
+  width:100%;
+  padding:10px;
+  border:1px solid #aaa;
+  border-radius: 5px;
+}
+
+.formLogin .formElement button {
+  width:100%;
+  height:40px;
+  border:none;
+  outline:none;
+  font-size:15px;
+  background: black;
+  color: white;
+  border-radius:10px;
+  cursor:pointer;
+}
+*/
