--- a/Projeto/public/www/css/style.css
+++ b/Projeto/public/www/css/style.css
@@ -258,7 +258,7 @@ hr.style-one {
 
 
 .formLogin {
-  position:absolute;
+  position:fixed;
   top:50%;
   left:50%;
   transform:translate(-50%, -50%);
