--- a/Projeto/public/www/css/style.css
+++ b/Projeto/public/www/css/style.css
@@ -1,4 +1,5 @@
 #produtos {display:none}
+#cart {display:none}
 #logout {display:none}
 #prodnav {display:none}
 #formLogin {display:none}
@@ -69,6 +70,20 @@ body {
   }
 }
 
+.cart {
+  background-color: rgba(107, 60, 60, 0.76); 
+  color: white;
+  padding: 16px 10px;
+  border: none;
+  cursor: pointer;
+  opacity: 0.8;
+  position: absolute;
+  top: 0px;
+  right: 200px;
+  width: 100px;
+  transition: 0.3s;
+}
+
 .login {
   background-color: rgba(107, 60, 60, 0.76); 
   color: white;
@@ -107,8 +122,12 @@ body {
   position: absolute;
   top: 0px;
   right: 0px;
-  width: 150px;
+  width: 200px;
   transition: 0.3s;
+}
+
+.cart:hover {
+  opacity: 1;
 }
 
 .login:hover {
@@ -315,6 +334,119 @@ hr.style-one {
 }
 
 .formLogin button {
+  width:100%;
+  height:40px;
+  border:none;
+  outline:none;
+  font-size:15px;
+  background: black;
+  color: white;
+  border-radius:10px;
+  cursor:pointer;
+}
+
+#shopping-cart {
+  width: 500px;
+  margin: 0 auto;
+}
+
+#shopping-cart table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+#shopping-cart table th,
+#shopping-cart table td {
+  border: 1px solid #ddd;
+  padding: 10px;
+}
+
+#shopping-cart table th {
+  background-color: #f2f2f2;
+}
+
+#shopping-cart table td button {
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+#product-list {
+  width: 500px;
+  margin: 50px auto;
+}
+
+#product-list .product {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+#product-list .product button {
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  margin-left: 20px;
+  cursor: pointer;
+}
+
+.formCart {
+  position:fixed;
+  top:22%;
+  left:82%;
+  transform:translate(-50%, -50%);
+  width:600px;
+  padding:20px 30px;
+  background: white;
+  box-shadow: 2px 2px 5px 5px rgba(0,0,0,0.15);
+  border-radius: 10px;
+  max-height: 300px;
+  overflow-y: scroll;
+}
+
+.formCart .active {
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.formCart .closeForm {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 15px;
+  height:15px;
+  background: gray;
+  color: #eee;
+  text-align: center;
+  line-height: 15px;
+  border-radius:15px;
+  cursor: pointer;
+}
+
+.formCart h2{
+  text-align:center;
+  color:black;
+  margin:10px 0px 20px;
+  font-size:25px;
+}
+
+.formCart input {
+  margin:15px 0px;
+}
+
+.formCart button {
   width:100%;
   height:40px;
   border:none;
