--- a/Projeto/public/www/css/style.css
+++ b/Projeto/public/www/css/style.css
@@ -17,7 +17,7 @@ body {
 
 .topnav {
   background-color: #1d1d1d;
-  position: fixed;
+  position: absolute;
   overflow: auto;
   width: 100%;
   transition: 0.3s;
@@ -57,7 +57,7 @@ body {
 }
 
 @media screen and (max-width: 700px) {
-  .topnav.responsive {position: relative;}
+  .topnav.responsive {position: fixed;}
   .topnav.responsive .icon {
     position: absolute;
     right: 0;
@@ -66,7 +66,11 @@ body {
   .topnav.responsive a {
     float: none;
     display: block;
-    text-align: left;
+  }
+  .topnav.responsive .login, .topnav.responsive .registar, .topnav.responsive .cart, .topnav.responsive .logout {
+    position: none;
+    width: 100%;
+
   }
 }
 
@@ -77,7 +81,6 @@ body {
   border: none;
   cursor: pointer;
   opacity: 0.8;
-  position: absolute;
   top: 0px;
   right: 100px;
   width: 100px;
@@ -90,7 +93,6 @@ body {
   padding: 16px 10px;
   border: none;
   cursor: pointer;
-  position: absolute;
   opacity: 0.8;
   top: 0px;
   right: 100px;
@@ -105,7 +107,6 @@ body {
   border: none;
   cursor: pointer;
   opacity: 0.8;
-  position: absolute;
   top: 0px;
   right: 0px;
   width: 100px;
@@ -119,7 +120,6 @@ body {
   border: none;
   cursor: pointer;
   opacity: 0.8;
-  position: absolute;
   top: 0px;
   right: 0px;
   width: 100px;
