--- a/Projeto/public/www/css/style.css
+++ b/Projeto/public/www/css/style.css
@@ -17,7 +17,7 @@ body {
 
 .topnav {
   background-color: #1d1d1d;
-  position: absolute;
+  position: fixed;
   overflow: auto;
   width: 100%;
   transition: 0.3s;
@@ -57,7 +57,7 @@ body {
 }
 
 @media screen and (max-width: 700px) {
-  .topnav.responsive {position: fixed;}
+  .topnav.responsive {position: fixed; height: 327.5px;}
   .topnav.responsive .icon {
     position: absolute;
     right: 0;
@@ -70,7 +70,22 @@ body {
   .topnav.responsive .login, .topnav.responsive .registar, .topnav.responsive .cart, .topnav.responsive .logout {
     position: none;
     width: 100%;
-
+  }
+  .login {
+    margin-top: 218px;
+    margin-right: -100px;
+  }
+  .registar {
+    margin-top: 273px;
+  }
+  .logout {
+    margin-top: 273px;
+    max-width: 50%;
+  }
+  .cart{
+    margin-top: 273px;
+    max-width: 50%;
+    margin-right: 100px;
   }
 }
 
@@ -80,6 +95,7 @@ body {
   padding: 16px 10px;
   border: none;
   cursor: pointer;
+  position: absolute;
   opacity: 0.8;
   top: 0px;
   right: 100px;
@@ -94,6 +110,7 @@ body {
   border: none;
   cursor: pointer;
   opacity: 0.8;
+  position: absolute;
   top: 0px;
   right: 100px;
   width: 100px;
@@ -106,6 +123,7 @@ body {
   padding: 16px 10px;
   border: none;
   cursor: pointer;
+  position: absolute;
   opacity: 0.8;
   top: 0px;
   right: 0px;
@@ -119,6 +137,7 @@ body {
   padding: 16px 10px;
   border: none;
   cursor: pointer;
+  position: absolute;
   opacity: 0.8;
   top: 0px;
   right: 0px;
@@ -143,7 +162,7 @@ body {
 }
 
 .footer {
-  position: fixed;
+  position: relative;
   left: 0;
   bottom: 0;
   width: 100%;
