--- a/Projeto/public/www/css/style.css
+++ b/Projeto/public/www/css/style.css
@@ -11,7 +11,7 @@ html {
 body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
-  background-color: rgb(224, 187, 107);
+  background-color: rgb(202, 164, 82);
   color: rgb(56, 56, 56);
 }
 
@@ -70,6 +70,7 @@ body {
   .topnav.responsive .login, .topnav.responsive .registar, .topnav.responsive .cart, .topnav.responsive .logout {
     position: none;
     width: 100%;
+    display: inline;
   }
   .login {
     margin-top: 218px;
@@ -90,7 +91,7 @@ body {
 }
 
 .cart {
-  background-color: rgba(107, 60, 60, 0.76); 
+  background-color: rgba(85, 82, 82, 0.76);
   color: white;
   padding: 16px 10px;
   border: none;
@@ -104,7 +105,7 @@ body {
 }
 
 .login {
-  background-color: rgba(107, 60, 60, 0.76); 
+  background-color: rgba(85, 82, 82, 0.76); 
   color: white;
   padding: 16px 10px;
   border: none;
@@ -118,7 +119,7 @@ body {
 }
 
 .registar {
-  background-color: rgba(107, 60, 60, 0.76); 
+  background-color: rgba(85, 82, 82, 0.76); 
   color: white;
   padding: 16px 10px;
   border: none;
@@ -132,7 +133,7 @@ body {
 }
 
 .logout {
-  background-color: rgba(107, 60, 60, 0.76); 
+  background-color: rgba(85, 82, 82, 0.76);
   color: white;
   padding: 16px 10px;
   border: none;
@@ -164,7 +165,7 @@ body {
 .footer {
   position: relative;
   left: 0;
-  bottom: 0;
+  bottom: -14px;
   width: 100%;
   background-color: #1d1d1d;
   color: white;
@@ -209,7 +210,7 @@ hr.style-one {
 }
 
 .imagebox2{
-  border: 10px solid rgb(241, 185, 62);
+  border: 10px solid rgb(211, 178, 107);
   outline: 2px solid rgb(49, 22, 22);
   padding: 5px 10px;
   margin-bottom: 30px;
@@ -296,20 +297,24 @@ hr.style-one {
   color: whitesmoke;
 }
 
-
 .formLogin {
   position:fixed;
   top:50%;
   left:50%;
   transform:translate(-50%, -50%);
-  width:300px;
+  width:500px;
   padding:20px 30px;
   background: white;
   box-shadow: 2px 2px 5px 5px rgba(0,0,0,0.15);
   border-radius: 10px;
 }
 
-.formLogin .active {
+.content .formLogin html {
+  overflow-y: hidden;
+}
+
+.formLogin .active{
+  opacity: .5;
   top: 50%;
   transform: translate(-50%, -50%);
 }
@@ -322,7 +327,7 @@ hr.style-one {
   height:15px;
   background: gray;
   color: #eee;
-  text-align: center;
+  text-align: left;
   line-height: 15px;
   border-radius:15px;
   cursor: pointer;
@@ -451,7 +456,7 @@ hr.style-one {
   height:15px;
   background: gray;
   color: #eee;
-  text-align: center;
+  text-align: left;
   line-height: 15px;
   border-radius:15px;
   cursor: pointer;
