--- a/Projeto/public/www/css/style.css
+++ b/Projeto/public/www/css/style.css
@@ -501,3 +501,17 @@ hr.style-one {
 #addCart:hover {
   opacity: 1;
 }
+
+#btnapi-container {
+  position: absolute;
+}
+
+#btnapi {
+  background-color: rgba(85, 82, 82, 0.76); 
+  color: white;
+  padding: 16px 10px;
+  border: none;
+  cursor: pointer;
+  opacity: 0.8;
+  transition: 0.3s;
+}
